# endless-sky-thrower

./: .gitignore  Makefile  Makefile.macos  Makefile.windows  README.md  compile_commands.json  copylibs  endless-sky-x86_64-continuous.AppImage.aria2  meson.build  pack.sh
.cache/clangd/index/: main.cpp.15442E95C06D454D.idx
src/: aria.hpp  changelog_widget.cpp  changelog_widget.hpp  dialogs.cpp  dialogs.hpp  downloader.cpp  downloader.hpp  functions.cpp  functions.hpp  global_variables.hpp  instance.cpp  instance.hpp  instance_widget.cpp  instance_widget.hpp  main.cpp  main_window.cpp  main_window.hpp  plugin_instance.cpp  plugin_instance.hpp  secondary_dialogs.cpp  secondary_dialogs.hpp
src/icon/: esthrower.xpm
toolchains/: i686-w64-mingw32.static  x86_64-w64-mingw32
